--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "example",
   "version": "0.0.1",
   "dependencies": {
-    "bower": "~1.3.12",
+    "bower": "1.8.14",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-concat-vendor": "0.0.4",
     "gulp-uglify": "^1.3.0",
-    "main-bower-files": "^2.9.0",
+    "main-bower-files": "^2.13.3",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "2.2.0",
     "gulp-inject": "1.5.0",
