--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>4.2.1.RELEASE</version>
+            <!-- <version>4.2.1.RELEASE</version> -->
+	    <version>5.0.0.RELEASE</version>
         </dependency>
 
         <dependency>
