--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <java-version>1.8</java-version>
         <org.aspectj-version>1.6.10</org.aspectj-version>
         <jackson.version>1.9.13</jackson.version>
-        <org.springframework-version>4.3.5.RELEASE</org.springframework-version>
+        <org.springframework-version>5.3.25</org.springframework-version>
         <org.slf4j-version>1.6.6</org.slf4j-version>
         <springfox-version>2.2.2</springfox-version>
     </properties>
