--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     runtimeOnly 'log4j:log4j:1.2.15'
     runtimeOnly 'mysql:mysql-connector-java:8.0.26'
     testImplementation 'junit:junit:4.11'
-    testImplementation 'org.springframework:spring-test:4.3.5.RELEASE'
+    //testImplementation 'org.springframework:spring-test:4.3.5.RELEASE'
+    testImplementation 'org.springframework:spring-test:5.1.9.RELEASE'
     //providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
     compileOnly 'javax.servlet:javax.servlet-api:3.0.1'
     compileOnly 'javax.servlet.jsp:jsp-api:2.2'
