--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.6.6'
     implementation 'org.apache.commons:commons-lang3:3.0'
     implementation 'io.springfox:springfox-swagger2:2.2.2'
-    implementation 'org.springframework:spring-webmvc:4.3.5.RELEASE'
+    //implementation 'org.springframework:spring-webmvc:4.3.5.RELEASE'
+    implementation 'org.springframework:spring-webmvc:5.1.9.RELEASE'
     implementation 'org.json:json:20160810'
     implementation 'com.googlecode.genericdao:dao:1.2.0'
     implementation 'com.googlecode.genericdao:search:1.2.0'
