--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,10 @@ dependencies {
     implementation 'org.springframework:spring-core:5.1.9.RELEASE'
     //implementation 'com.fasterxml.jackson.core:jackson-databind:2.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
-    implementation 'org.springframework.security:spring-security-web:4.2.1.RELEASE'
+    //implementation 'org.springframework.security:spring-security-web:4.2.1.RELEASE'
+    implementation 'org.springframework.security:spring-security-web:5.3.0.RELEASE'
+
+
     //implementation 'org.springframework.security:spring-security-config:4.2.1.RELEASE'
     implementation 'org.springframework.security:spring-security-config:5.3.0.RELEASE'
     implementation 'org.hibernate:hibernate-validator:5.2.4.Final'
