--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'com.googlecode.genericdao:search:1.2.0'
     implementation 'javax:javaee-api:7.0'
     implementation 'org.hibernate:hibernate-entitymanager:5.2.8.Final'
-    implementation 'org.springframework:spring-web:4.3.5.RELEASE'
+    //implementation 'org.springframework:spring-web:4.3.5.RELEASE'
+    implementation 'org.springframework:spring-web:5.1.9.RELEASE'
     runtimeOnly 'org.slf4j:jcl-over-slf4j:1.6.6'
     runtimeOnly 'org.slf4j:slf4j-log4j12:1.6.6'
     runtimeOnly 'log4j:log4j:1.2.15'
