--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-context:4.3.5.RELEASE'
+    //implementation 'org.springframework:spring-context:4.3.5.RELEASE'
+    implementation 'org.springframework:spring-context:5.1.9.RELEASE'
     //implementation 'org.springframework:spring-context-support:4.3.5.RELEASE'
     implementation 'org.springframework:spring-context-support:5.1.9.RELEASE'
     implementation 'org.springframework.data:spring-data-jpa:1.6.6.RELEASE'
