US-95-TASK--102 gradle add

--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ dependencies {
 group = 'com.mycompany'
 version = '1.0-SNAPSHOT'
 description = 'myproject Maven Webapp'
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+java.sourceCompatibility = JavaVersion.VERSION_1_9
 
 publishing {
     publications {
@@ -68,3 +68,4 @@ publishing {
         }
     }
 }
+targetCompatibility = JavaVersion.VERSION_1_9
