US-96-TASK-110 Controller for refreshing taiga tokens

--- a/src/main/resources/scheduling.properties
+++ b/src/main/resources/scheduling.properties
@@ -2,4 +2,5 @@ fixedDelay.in.milliseconds=5000
 taiga.cron.expression=0 40 23 * * ?
 slack.cron.expression=0 45 23 * * ?
 github.cron.expression=0 50 23 * * ?
-taiga.sprints.cron.expression=0 40 20 * * ?
+taiga.sprints.cron.expression=0 40 22 * * ?
+taiga.tokens.cron.expression=0 40 21 * * ?
