--- a/src/main/resources/scheduling.properties
+++ b/src/main/resources/scheduling.properties
@@ -1,7 +1,8 @@
 fixedDelay.in.milliseconds=5000
-taiga.cron.expression=0 40 23 * * ?
 slack.cron.expression=0 45 23 * * ?
 github.stats.cron.expression=0 50 23 * * ?
 github.blame.cron.expression=0 00 18 * * ?
-taiga.sprints.cron.expression=0 40 22 * * ?
-taiga.tokens.cron.expression=0 40 21 * * ?
+taiga.tokens.cron.expression=0 40 17 * * ?
+taiga.sprints.cron.expression=0 40 19 * * ?
+taiga.tasks.history.cron.expression= 0 40 21 * * ?
+taiga.cron.expression=0 40 23 * * ?
